fix small issue with z-index

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -40,6 +40,7 @@
   padding-left: 65px;
   padding-top: 28px;
   box-shadow: 2px 0 10px 10px rgba($black, 0.2);
+  z-index: 1000;
 
   @include respond(tab) {
     padding-left: 20px;
