--- a/src/sass/components/_testimionals.scss
+++ b/src/sass/components/_testimionals.scss
@@ -14,6 +14,7 @@
 .testimonials__content {
   display: flex;
   position: relative;
+  z-index: 0;
 
   @include respond(tab) {
     align-items: center;
